--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1>Compound Interest Calculator</h1>
+    <h1 class="title">Compound Interest Calculator</h1>
     <form action="/" method="get" id="ic-form">
       <label for="ic-initial-value">Initial Value</label>
       <input
