Add step to number inputs to accept non integer values

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         value="1000"
         required
         min="0"
+        step="0.01"
       />
 
       <label for="ic-periodic-value">Periodic Value</label>
@@ -27,6 +28,7 @@
         value="40"
         required
         min="0"
+        step="0.01"
       />
 
       <label for="ic-interest-rate">Interest Rate %</label>
@@ -37,6 +39,7 @@
         value="1"
         required
         min="0"
+        step="0.01"
       />
       <select name="ic-interest-period" id="ic-interest-period" required>
         <option value="1" selected>Monthly</option>
@@ -51,6 +54,7 @@
         value="10"
         required
         min="1"
+        step="0.01"
       />
       <select name="ic-period-unit" id="ic-period-unit" required>
         <option value="1">Months</option>
