--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="A calculator for Compound Interest with selction of Monthly or yearly rates" />
     <title>Compound interest Calculator</title>
     <link rel="stylesheet" href="style.css" />
   </head>
