--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="A calculator for Compound Interest with selction of Monthly or yearly rates" />
+    <meta
+      name="description"
+      content="A calculator for Compound Interest with selction of Monthly or yearly rates"
+    />
     <title>Compound interest Calculator</title>
     <link rel="stylesheet" href="style.css" />
   </head>
@@ -42,7 +45,12 @@
         min="0"
         step="0.01"
       />
-      <select name="ic-interest-period" id="ic-interest-period" required aria-label="Interest period>
+      <select
+        name="ic-interest-period"
+        id="ic-interest-period"
+        required
+        aria-label="Interest period"
+      >
         <option value="1" selected>Monthly</option>
         <option value="12">Yearly</option>
       </select>
