--- a/index.html
+++ b/index.html
@@ -11,103 +11,105 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <!-- Settings dialog -->
-    <dialog>
-      <form action="/" id="settings-form">
-        <fieldset>
-          <legend>Select light or dark mode</legend>
-          <div>
-            <input type="radio" id="light" name="color-mode" value="light" />
-            <label for="light">Light</label>
-          </div>
-          <div>
-            <input type="radio" id="dark" name="color-mode" value="dark" />
-            <label for="dark">Dark</label>
-          </div>
-          <div>
-            <input
-              type="radio"
-              id="system"
-              name="color-mode"
-              value="system"
-              checked
-            />
-            <label for="system">System</label>
-          </div>
-        </fieldset>
+    <main>
+      <!-- Settings dialog -->
+      <dialog>
+        <form action="/" id="settings-form">
+          <fieldset>
+            <legend>Select light or dark mode</legend>
+            <div>
+              <input type="radio" id="light" name="color-mode" value="light" />
+              <label for="light">Light</label>
+            </div>
+            <div>
+              <input type="radio" id="dark" name="color-mode" value="dark" />
+              <label for="dark">Dark</label>
+            </div>
+            <div>
+              <input
+                type="radio"
+                id="system"
+                name="color-mode"
+                value="system"
+                checked
+              />
+              <label for="system">System</label>
+            </div>
+          </fieldset>
+        </form>
+        <button autofocus id="close-dialog">Done</button>
+      </dialog>
+      <button id="settings-button">Settings</button>
+      <!-- Settings dialog -->
+      <h1 class="title">Compound Interest Calculator</h1>
+      <form action="/" method="get" id="ic-form">
+        <label for="ic-initial-value">Initial Value</label>
+        <input
+          type="number"
+          name="ic-initial-value"
+          id="ic-initial-value"
+          value="1000"
+          required
+          min="0"
+          step="0.01"
+        />
+
+        <label for="ic-periodic-value">Periodic Value</label>
+        <input
+          type="number"
+          name="ic-periodic-value"
+          id="ic-periodic-value"
+          value="40"
+          required
+          min="0"
+          step="0.01"
+        />
+
+        <label for="ic-interest-rate">Interest Rate %</label>
+        <input
+          type="number"
+          name="ic-interest-rate"
+          id="ic-interest-rate"
+          value="1"
+          required
+          min="0"
+          step="0.01"
+        />
+        <select
+          name="ic-interest-period"
+          id="ic-interest-period"
+          required
+          aria-label="Interest period"
+        >
+          <option value="1" selected>Monthly</option>
+          <option value="12">Yearly</option>
+        </select>
+
+        <label for="ic-period">Period</label>
+        <input
+          type="number"
+          name="ic-period"
+          id="ic-period"
+          value="10"
+          required
+          min="1"
+          step="0.01"
+        />
+        <select
+          name="ic-period-unit"
+          id="ic-period-unit"
+          required
+          aria-label="Period unit"
+        >
+          <option value="1">Months</option>
+          <option value="12" selected>Years</option>
+        </select>
+
+        <button type="submit">Calculate</button>
       </form>
-      <button autofocus id="close-dialog">Done</button>
-    </dialog>
-    <button id="settings-button">Settings</button>
-    <!-- Settings dialog -->
-    <h1 class="title">Compound Interest Calculator</h1>
-    <form action="/" method="get" id="ic-form">
-      <label for="ic-initial-value">Initial Value</label>
-      <input
-        type="number"
-        name="ic-initial-value"
-        id="ic-initial-value"
-        value="1000"
-        required
-        min="0"
-        step="0.01"
-      />
 
-      <label for="ic-periodic-value">Periodic Value</label>
-      <input
-        type="number"
-        name="ic-periodic-value"
-        id="ic-periodic-value"
-        value="40"
-        required
-        min="0"
-        step="0.01"
-      />
-
-      <label for="ic-interest-rate">Interest Rate %</label>
-      <input
-        type="number"
-        name="ic-interest-rate"
-        id="ic-interest-rate"
-        value="1"
-        required
-        min="0"
-        step="0.01"
-      />
-      <select
-        name="ic-interest-period"
-        id="ic-interest-period"
-        required
-        aria-label="Interest period"
-      >
-        <option value="1" selected>Monthly</option>
-        <option value="12">Yearly</option>
-      </select>
-
-      <label for="ic-period">Period</label>
-      <input
-        type="number"
-        name="ic-period"
-        id="ic-period"
-        value="10"
-        required
-        min="1"
-        step="0.01"
-      />
-      <select
-        name="ic-period-unit"
-        id="ic-period-unit"
-        required
-        aria-label="Period unit"
-      >
-        <option value="1">Months</option>
-        <option value="12" selected>Years</option>
-      </select>
-
-      <button type="submit">Calculate</button>
-    </form>
-
-    <div id="calc-result"></div>
+      <div id="calc-result"></div>
+    </main>
     <script type="module" src="src/main.js"></script>
   </body>
 </html>
